Bug 141835 - After Back arrow from black "Click to exit" final presentation mode screen, spacebar functions incorrectly.
Summary: After Back arrow from black "Click to exit" final presentation mode screen, s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.7.2 release
Hardware: All All
: low trivial
Assignee: dldld
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-22 16:33 UTC by Jonathan Snow
Modified: 2023-06-19 16:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file reproducing bullet list animation added line bug (15.46 KB, application/vnd.oasis.opendocument.presentation)
2021-04-22 16:33 UTC, Jonathan Snow
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Snow 2021-04-22 16:33:03 UTC
Description:
You should be able to back-arrow into the final slide from the "click to exit screen" and have it function exactly the same as if you go there during the presentation. Instead, the spacebar ends the presentation. 

Steps to Reproduce:
1. Create animated presentation slide
2. In presentation mode click through to final black screen
3. Use back arrow to go back to last slide
4. Slide functions incorrectly: spacebar ends presentation instead of advancing. 

Actual Results:
when coming back from the final black "click to exit" slide, the last slide in the deck functions in an irrational manner. The spacebar and right arrow end the presentation. Left arrow dissappears animated items in random order (separate bug filed). 

Expected Results:
Should be able to step back and forth smoothly and rationally with arrow keys or space bar in any animated presentation. 


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.4.7.2
Build ID: Gentoo official package
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.utf8); UI-Language: en-US
Calc: threaded
Comment 1 Jonathan Snow 2021-04-22 16:33:55 UTC
Created attachment 171358 [details]
file reproducing bullet list animation added line bug
Comment 2 Timur 2021-04-23 13:10:14 UTC Comment hidden (obsolete)
Comment 3 Timur 2021-04-23 13:12:33 UTC
I confirm and retitle. Back works, it's spacebar that doesn't. 
Previously up tp 6.3 behavior was different but also not correct, not a regression. 
Minor issue, arrows work fine and can be used to control bullets. 
I still don't see a practical value in fixing this.
Comment 4 Jonathan Snow 2021-04-23 13:36:04 UTC
Arrows don't work fine, but that's a separate bug. The practical value is you're at the end of your talk, somebody asks a question, you arrow back and suddenly boom you're kicked out of the presentation unexpectedly. 

It's sloppy coding.
Comment 5 Timur 2021-04-23 15:36:06 UTC Comment hidden (obsolete)
Comment 6 Timur 2021-04-23 16:01:36 UTC
If you arrow back and forth, I think it's working ok. Test with master 7.2+.
Difference can stem from reporter using 6.4.7, master is relevant. 
But true if you press spacebar by habit, it ends. 
I tested in presentation mode, guess the same with presentation console.
Comment 7 dldld 2022-03-27 14:04:40 UTC
I have started working on this bug.
Comment 8 Commit Notification 2022-04-27 10:15:31 UTC
dldld committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/daeba3f3cc376365b041c2441e3b6dbd46aa8235

tdf#141835 handle SHOWWINDOWMODE_END when resuming the slide show

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jonathan Snow 2022-05-02 20:40:52 UTC
Confirmed on windows v. 7.1.4.2 (work machine)

I really appreciate you working on this bug, it keeps biting me in presentations.
Comment 10 Timur 2022-05-04 11:40:20 UTC
Daniel, thanks for fixing this one (and some other Presentation bugs). 
You should set Fixed yourself when done. I did it now. 
Others can set Verify when tested, in this case it's Jonathan.
Comment 11 Timur 2022-05-04 11:40:59 UTC
I tested this and also see it as Fixed, so I also set Verified.