tdf#141835 Fix slide show stops after going to ended mode

The problem which is fixed with this commit is, that the slide show
has different modes:

- Blank (White or Black screen),
- End (Black screen with "Click to exit" text)
- Normal (Presentation is normally running)
- Pause (e.g. clicked on Pause button in Presentation Console)

When a slide should be displayed the displayCurrentSlide method is
called and then the "special" modes should be left and the slide
should be displayed. In some cases this has been done before by other
pieces of code, in other circumstances this is not the case. Therefore,
restarting the show as it done at other places in the code, fixes the
reported issue.

Change-Id: I59f4ed7973170fe6a6fb09e029c522c1d560c681